--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  border: 1px lightgrey solid;
 }
 img {
   max-width: 100%;
@@ -16,10 +17,12 @@ body {
 
 nav {
   padding: 2vh 5vw;
-  position: sticky;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
-section, footer {
-  padding: 10vh 10vw;
+section {
+  padding: 14vh 10vw;
 }
 .box-on-top {
 
@@ -66,19 +69,17 @@ h6 {
 }
 p {
   font-size: 0.9rem;
-  font-weight: 300;
   line-height: 1.5;
   margin-bottom: 1.5rem;
 }
 a {
   color: #ff794d;
   font-size: 0.9rem;
-  font-weight: 300;
   text-decoration: none;
 }
 a:hover {
   color: #ff794d;
-  font-weight: 400;
+  font-weight: 700;
 }
 i {
   color: #ff794d;
@@ -89,6 +90,8 @@ ul,li {
 }
 blockquote {
   font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  font-style: italic;
 }
 label {
   font-family: 'Roboto Slab', serif;
@@ -103,7 +106,7 @@ input,placeholder {
 }
 .footer-text {
   font-family: 'Roboto', sans-serif;
-  font-size: 0.6rem;
+  font-size: 0.7rem;
 }
 .text-white {
   color: white;
@@ -115,35 +118,36 @@ input,placeholder {
   font-size: 2.5rem;
 }
 .text-medium {
-    font-size: 1.8rem;
+    font-size: 1.5rem;
 }
 .text-small {
   font-size: 0.9rem;
 }
 
 /* buttons */
-
 button {
   font-family: 'Roboto Slab', serif;
 }
 .button-main {
   background-color: white;
   border: 5px solid #ff794d;
-  min-width: 80px;
   padding: 10px 5px;
+  min-width: 120px;
   box-shadow: 0.5px 5px 10px rgba(0,0,0,0.05);
 }
 .button-main:hover {
-  padding: 20px 20px;
-
+  /*padding: 20px 20px;*/
+  transform: scale(1.1);
 }
 .button-dark {
   background-color: #1e2330;
   border: 5px solid #1e2330;
   color: white;
+  min-width: 80px;
+  padding: 10px 5px;
 }
 .button-dark:hover {
-
+  padding: 20px 20px;
 }
 /* this should change with javascript since button style will depend on toggle state */
 .button-toggle {
@@ -152,17 +156,104 @@ button {
 
 /* helper classes */
 
+/* BACKGROUNDS */
 .bg-white {
   background-color: white;
   padding: 2%;
   box-shadow: 0.5px 5px 20px rgba(0,0,0,0.13);
 }
 .bg-dark {
- background-color: #1e2330;
+ background-color: #434343;
  padding: 2%;
  box-shadow: 0.5px 5px 20px rgba(0,0,0,0.13);
 }
+.bg-grey {
+  background-color: #797979;
+  padding: 2%;
+}
 .bg-bright {
   background-color: #ff794d;
+  padding: 2%;
   box-shadow: 0.5px 5px 20px rgba(0,0,0,0.13);
+}
+
+/* ALIGNMENT */
+.text-center {
+  text-align: center;
+}
+.text-left {
+  text-align: left;
+}
+.text-right {
+  text-align: right;
+}
+.container-center {
+  margin: 0 auto;
+}
+
+/* PADDING/MARGINS */
+.pad-footer {
+  padding: 2vh 12vw;
+}
+.pad-all-s {
+  padding: 5%;
+}
+.pad-all-m {
+  padding: 10%;
+}
+.pad-all-l {
+  padding: 20%;
+}
+.pad-top-s {
+  padding-top: 5%;
+}
+.pad-top-m {
+  padding-top: 10%;
+}
+.pad-top-l {
+  padding-top: 20%;
+}
+.pad-right-s {
+  padding-right: 5%;
+}
+.pad-right-m {
+  padding-right: 10%;
+}
+.pad-right-l {
+  padding-right: 20%;
+}
+.pad-bottom-s {
+  padding-bottom: 5%;
+}
+.pad-bottom-m {
+  padding-bottom: 10%;
+}
+.pad-bottom-l {
+  padding-bottom: 20%;
+}
+.pad-left-s {
+  padding-left: 5%;
+}
+.pad-left-m {
+  padding-left: 5%;
+}
+.pad-left-l {
+  padding-left: 5%;
+}
+/* ANIMATIONS */
+.nudge-right {
+
+}
+.nudge-left {
+
+}
+.nudge-down {
+
+}
+.transition-ease{
+  -webkit-transition: all 367ms cubic-bezier(0.215, 1, 0.320, 0.965); /* older webkit */
+-webkit-transition: all 367ms cubic-bezier(0.215, 1.205, 0.320, 0.965);
+   -moz-transition: all 367ms cubic-bezier(0.215, 1.205, 0.320, 0.965);
+     -o-transition: all 367ms cubic-bezier(0.215, 1.205, 0.320, 0.965);
+        transition: all 367ms cubic-bezier(0.215, 1.205, 0.320, 0.965); /* custom */
 }
