--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,6 @@
-/* universal styles */
+/* universal styles ----------------------------------------- */
 * {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
   border: 1px lightgrey solid;
 }
 img {
@@ -12,9 +10,7 @@ img {
 body {
   background-color: #fefefe;
 }
-
-/* layouts */
-
+/* layouts ----------------------------------------- */
 nav {
   padding: 2vh 5vw;
   position: fixed;
@@ -30,15 +26,14 @@ section {
 .flip-vertical {
 
 }
-
-/* typography */
-
+/* typography ----------------------------------------- */
 body {
   font-family: 'Roboto Slab', serif;
   color: #1e2330;
 }
 h1,h2,h3,h4,h5,h6 {
   font-family: 'Catamaran', sans-serif;
+  margin: 0;
 }
 h1 {
   color: #c84447;
@@ -62,7 +57,6 @@ h4 {
 h5 {
   font-size: 1.2rem;
   text-transform: capitalize;
-
 }
 h6 {
   font-size: 1rem;
@@ -93,13 +87,6 @@ blockquote {
   font-weight: 300;
   font-style: italic;
 }
-label {
-  font-family: 'Roboto Slab', serif;
-}
-input,placeholder {
-  font-family: 'Roboto', sans-serif;
-  font-size: 1rem;
-}
 .price {
   font-family: 'Catamaran', sans-serif;
   color: grey;
@@ -107,6 +94,9 @@ input,placeholder {
 .footer-text {
   font-family: 'Roboto', sans-serif;
   font-size: 0.7rem;
+}
+.footer-text a:hover {
+  font-weight: bold;
 }
 .text-white {
   color: white;
@@ -123,8 +113,29 @@ input,placeholder {
 .text-small {
   font-size: 0.9rem;
 }
+/* forms -----------------------------------------  */
+label {
+  font-family: 'Roboto Slab', serif;
+  display: block;
+  padding: 0.5rem 0.2rem 0.5rem;
+}
+input,placeholder {
+  font-family: 'Roboto', sans-serif;
+  font-size: 1rem;
+}
+input {
+  width: 90%;
+  height: 2rem;
+}
+textarea {
+  width: 90%;
+  height: 5rem;
+}
+/*.pad-form {
+  padding: 0.5rem 0.2rem 0.5rem;
+}*/
 
-/* buttons */
+/* buttons -----------------------------------------  */
 button {
   font-family: 'Roboto Slab', serif;
 }
@@ -153,9 +164,7 @@ button {
 .button-toggle {
 
 }
-
-/* helper classes */
-
+/* helper classes -----------------------------------------  */
 /* BACKGROUNDS */
 .bg-white {
   background-color: white;
