--- a/_layouts/default-lp.html
+++ b/_layouts/default-lp.html
@@ -22,38 +22,7 @@
       </nav>
     </header>
     <!-- this is where my content goes -->
-        <section>
-      <h1>Title of case study with awesome client</h1>
-      <div class="grid">
-        <div class="col-6_sm-12 bg-white">
-          <p>This is a tagline</p>
-            <ul>
-              <li>this is a descriptive bullet point</li>
-              <li>people love bullet points</li>
-              <li>give the people all the bullet points</li></ul>
-            <p>What are you waiting for? Buy the things.</p>
-        </div>
-        <div class="col-6_sm-12 bg-bright">
-          <h5 class="text-center">download the case study</h5>
-          <form class="grid-spaceAround  pad-form" method="POST" action="http://formspree.io/busababruns@gmail.com">
-            <div class="col-6_sm-12 grid">
-              <label for="name">First Name</label>
-              <input type="text" name="firstname" id="name" placeholder=" Harry">
-            </div>
-            <div class="col-6_sm-12 grid">
-              <label for="name">Last Name</label>
-              <input type="text" name="lastname" id="name" placeholder=" Potter">
-            </div>
-            <div class="col-12 grid">
-              <label for="email">Email</label>
-              <input type="email" name="email" id="email" placeholder=" harry@wizards.com">
-            </div>
-            <a href=""><button type="submit" class="button-dark">get the pdf</button></a>
-          </form>
-        </div>
-      </div>
-    </section>
-
+    {{content}}
     <!-- this is my footer section which will be reused in jekyll -->
     <footer>
       <div class="bg-grey grid-top pad-footer">
