--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,50 +10,21 @@
     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    <!-- this is my landing page header and simplified nav which will be reused in jekyll -->
+    <!-- this is my header and nav which will be reused in jekyll -->
     <header>
       <nav class="grid-spaceBetween-middle bg-white">
         <div class="col-2_sm-12 text-center">
           <a href="/"><img src"" alt="knowitall logo"></a>
         </div>
-        <div class="col-1_sm-12 text-center">
+        <div class="col-3_sm-12 text-center">
+          <a href="services.html">services</a>
+          <a href="blog.html">blog</a>
           <a href="/#contact">contact</a>
         </div>
       </nav>
     </header>
     <!-- this is where my content goes -->
-        <section>
-      <h1>Title of case study with awesome client</h1>
-      <div class="grid">
-        <div class="col-6_sm-12 bg-white">
-          <p>This is a tagline</p>
-            <ul>
-              <li>this is a descriptive bullet point</li>
-              <li>people love bullet points</li>
-              <li>give the people all the bullet points</li></ul>
-            <p>What are you waiting for? Buy the things.</p>
-        </div>
-        <div class="col-6_sm-12 bg-bright">
-          <h5 class="text-center">download the case study</h5>
-          <form class="grid-spaceAround  pad-form" method="POST" action="http://formspree.io/busababruns@gmail.com">
-            <div class="col-6_sm-12 grid">
-              <label for="name">First Name</label>
-              <input type="text" name="firstname" id="name" placeholder=" Harry">
-            </div>
-            <div class="col-6_sm-12 grid">
-              <label for="name">Last Name</label>
-              <input type="text" name="lastname" id="name" placeholder=" Potter">
-            </div>
-            <div class="col-12 grid">
-              <label for="email">Email</label>
-              <input type="email" name="email" id="email" placeholder=" harry@wizards.com">
-            </div>
-            <a href=""><button type="submit" class="button-dark">get the pdf</button></a>
-          </form>
-        </div>
-      </div>
-    </section>
-
+    {{content}}
     <!-- this is my footer section which will be reused in jekyll -->
     <footer>
       <div class="bg-grey grid-top pad-footer">
@@ -76,6 +47,15 @@
         </div>
         <div class="col-12">
           <h3 class="footer-text text-center text-white"><i class="fa fa-copyright text-white" aria-hidden="true"></i> Copyright Lily Bruns 2017</h3>
+        </div>
+      </div>
+      <!-- this is the sign-up form -->
+      <div class="grid bg-bright pad-footer">
+        <div class="col-4_sm-12">
+          <h4>Sign up for updates <i class="fa fa-arrow-right text-dark" aria-hidden="true"></i></h4>
+        </div class="col-8_sm-12">
+        <!-- embed sign-up form below -->
+        <div>
         </div>
       </div>
     </footer>
