--- a/_layouts/default-lp.html
+++ b/_layouts/default-lp.html
@@ -48,4 +48,6 @@
         </div>
       </div>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js/main.js" type="text/javascript"></script>
   </body>
