--- a/_layouts/default-lp.html
+++ b/_layouts/default-lp.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.4.1/gridlex.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
   </head>
   <body>
     <!-- this is my landing page header and simplified nav which will be reused in jekyll -->
@@ -16,18 +16,53 @@
         <div class="col-2_sm-12 text-center">
           <a href="/"><img src"" alt="knowitall logo"></a>
         </div>
-        <div class="col-1_sm-12 text-center">
+        <div class="col-1_sm-0_xs-0 text-center">
           <a href="/#contact">contact</a>
         </div>
       </nav>
     </header>
-    <!-- this is where my content goes -->
-    {{content}}
+    <section class="pad-top-m">
+      <h1 class="pad-bottom-s text-center">{{page.title}}</h1>
+      <div class="grid pad-bottom-s">
+        <div class="col-7_sm-12 bg-white">
+          <p>{{page.tagline}}</p>
+          <ul>
+            {% for point in page.bulletpoints %}
+            <li>{{point.text}}</li>
+            {% endfor %}
+          </ul>
+          <p>{{page.extratext}}</p>
+          <p>{{page.closingpitch}}</p>
+        </div>
+        <div class="col-7_sm-12 bg-bright container-float-lpform">
+          <h5 class="text-center">download the case study</h5>
+          <form class="grid-spaceAround" method="POST" action="http://formspree.io/busababruns@gmail.com">
+            <div class="col-6_sm-12 grid">
+              <label for="name">First Name</label>
+              <input type="text" name="firstname" id="name" placeholder=" Harry">
+            </div>
+            <div class="col-6_sm-12 grid">
+              <label for="name">Last Name</label>
+              <input type="text" name="lastname" id="name" placeholder=" Potter">
+            </div>
+            <div class="col-12 grid">
+              <label for="email">Email</label>
+              <input type="email" name="email" id="email" placeholder=" harry@wizards.com">
+            </div>
+            <div>
+              <button type="submit" class="button-dark transition-ease margin-top-s">get the pdf</button>
+            </div>
+          </form>
+        </div>
+      </div>
+      <!-- this is where extra content goes -->
+      {{content}}
+    </section>
     <!-- this is my footer section which will be reused in jekyll -->
     <footer>
       <div class="bg-grey grid-top pad-footer">
         <div class="col-3_sm-12">
-          <img src="images/lilybruns-headshot.jpeg" alt="lily bruns headshot">
+          <img src="../images/lilybruns-headshot.jpeg" alt="lily bruns headshot">
         </div>
         <div class="col-5_sm-12">
           <h6 class="footer-text text-white">Lily Bruns is a blabbity blah blah blah.</h6>
