played with positions
revised "floats" for hero and lp form using mix of absolute and relative positions. tweaks to padding and media queries.

--- a/_layouts/default-lp.html
+++ b/_layouts/default-lp.html
@@ -21,10 +21,10 @@
         </div>
       </nav>
     </header>
-    <section class="pad-top-m">
+    <section class="lp-infoandform pad-top-m">
       <h1 class="pad-bottom-s text-center">{{page.title}}</h1>
       <div class="grid pad-bottom-s">
-        <div class="col-7_sm-12 bg-white">
+        <div class="col-6_sm-12 bg-white">
           <p>{{page.tagline}}</p>
           <ul>
             {% for point in page.bulletpoints %}
@@ -34,25 +34,27 @@
           <p>{{page.extratext}}</p>
           <p>{{page.closingpitch}}</p>
         </div>
-        <div class="col-7_sm-12 bg-bright container-float-lpform">
-          <h5 class="text-center">download the case study</h5>
-          <form class="grid-spaceAround" method="POST" action="http://formspree.io/busababruns@gmail.com">
-            <div class="col-6_sm-12 grid">
-              <label for="name">First Name</label>
-              <input type="text" name="firstname" id="name" placeholder=" Harry">
-            </div>
-            <div class="col-6_sm-12 grid">
-              <label for="name">Last Name</label>
-              <input type="text" name="lastname" id="name" placeholder=" Potter">
-            </div>
-            <div class="col-12 grid">
-              <label for="email">Email</label>
-              <input type="email" name="email" id="email" placeholder=" harry@wizards.com">
-            </div>
-            <div>
-              <button type="submit" class="button-dark transition-ease margin-top-s">get the pdf</button>
-            </div>
-          </form>
+        <div class="position-rel col-6_sm-12">
+          <div class="container-float-lpform bg-bright">
+            <h5 class="text-center">download the case study</h5>
+            <form class="grid-spaceAround" method="POST" action="http://formspree.io/busababruns@gmail.com">
+              <div class="col-6_sm-12 grid">
+                <label for="name">First Name</label>
+                <input type="text" name="firstname" id="name" placeholder=" Harry">
+              </div>
+              <div class="col-6_sm-12 grid">
+                <label for="name">Last Name</label>
+                <input type="text" name="lastname" id="name" placeholder=" Potter">
+              </div>
+              <div class="col-12 grid">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" placeholder=" harry@wizards.com">
+              </div>
+              <div>
+                <button type="submit" class="button-dark transition-ease margin-top-s">get the pdf</button>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
       <!-- this is where extra content goes -->
