--- a/_layouts/lp.html
+++ b/_layouts/lp.html
@@ -21,23 +21,25 @@
         </div>
       </nav>
     </header>
-    <section class="pad-top-m container-center">
-      <h1 class="text-center">{{page.title}}</h1>
+    <section class="pad-hero container-center">
+      <h1 class="text-center pad-top-m pad-bottom-s">{{page.title}}</h1>
       <!-- this is the container for all the elements  -->
-      <div class="grid-noGutter-noBottom">
+      <div class="grid-noGutter-noBottom pad-left-s">
         <!-- this is the container for the white box (populated by jekyll) -->
-        <div class="col-6 bg-white pad-box">
-          <p>{{page.tagline}}</p>
-          <ul>
-            {% for point in page.bulletpoints %}
-            <li>{{point.text}}</li>
-            {% endfor %}
-          </ul>
-          <p>{{page.extratext}}</p>
-          <p>{{page.closingpitch}}</p>
+        <div class="col-6_sm-12 bg-white pad-box">
+          <div class=pad-all-s>
+            <p>{{page.tagline}}</p>
+            <ul>
+              {% for point in page.bulletpoints %}
+              <li>{{point.text}}</li>
+              {% endfor %}
+            </ul>
+            <p>{{page.extratext}}</p>
+            <p>{{page.closingpitch}}</p>
+          </div>
         </div>
         <!-- this is the wrapper for the lp form box  -->
-        <div class="col-6 position-rel">
+        <div class="col-6_sm-12 position-rel lp-infoandform">
           <!-- this is the container for the lp form -->
           <div class="bg-bright pad-all-m">
             <form class="grid-spaceBetween margin-all-s" method="POST" action="http://formspree.io/busababruns@gmail.com">
@@ -59,56 +61,12 @@
         </div>
       </div>
     </section>
-
-    <!-- <section class="grid pad-top-m">
-      <div class="container-center pad-bottom-s">
-        <h1>{{page.title}}</h1>
-      </div>
-      <div class="col-6_sm-12">
-        <div class="bg-white container-center">
-          <p>{{page.tagline}}</p>
-          <ul>
-            {% for point in page.bulletpoints %}
-            <li>{{point.text}}</li>
-            {% endfor %}
-          </ul>
-          <p>{{page.extratext}}</p>
-          <p>{{page.closingpitch}}</p>
-        </div>
-      </div>
-      <div class="col-6_sm-12">
-        <div class="position-abs">
-          <div class="bg-bright pad-all-s lp-infoandform">
-            <h5 class="text-center">download the case study</h5>
-            <form class="grid-spaceBetween margin-all-s" method="POST" action="http://formspree.io/busababruns@gmail.com">
-              <div class="col-5_sm-12 grid">
-                <label for="name">First Name</label>
-                <input type="text" name="firstname" id="name" placeholder=" Harry">
-              </div>
-              <div class="col-5_sm-12 grid">
-                <label for="name">Last Name</label>
-                <input type="text" name="lastname" id="name" placeholder=" Potter">
-              </div>
-              <div class="col-12 grid">
-               <label for="email">Email</label>
-               <input type="email" name="email" id="email" placeholder=" harry@wizards.com">
-              </div>
-              <button type="submit" class="button-dark container-center margin-top-s transition-ease">get the pdf</button>
-            </form>
-          </div>
-        </div>
-      </div>
-      </section> -->
-
-
-
-      <section class="pad-section">
-      <!-- this is where extra content goes -->
-      {{content}}
-      </section>
-    <!-- this is my footer section which will be reused in jekyll -->
+    <section class="pad-section">
+    <!-- this is where extra content goes -->
+    {{content}}
+    </section>
     <footer>
-      <div class="bg-grey grid-top pad-footer">
+      <div class="pad-footer bg-grey grid  center-screen-md">
         <div class="col-3_sm-12">
           <img src="../images/lilybruns-headshot.jpeg" alt="lily bruns headshot">
         </div>
@@ -127,7 +85,7 @@
           </div>
         </div>
         <div class="col-12">
-          <h3 class="footer-text text-center text-white"><i class="fa fa-copyright text-white" aria-hidden="true"></i> Copyright Lily Bruns 2017</h3>
+          <h3 class="footer-text text-white"><i class="fa fa-copyright text-white" aria-hidden="true"></i> Copyright Lily Bruns 2017</h3>
         </div>
       </div>
     </footer>
